--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.2.0",
     "date-fns": "^2.29.3",
     "file-saver": "2.0.5",
+    "ngx-quicklink": "^0.3.0",
     "rxjs": "~7.8.0",
     "swiper": "^7",
     "tslib": "^2.2.0",
@@ -35,8 +36,8 @@
     "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "^15.2.0",
     "@angular/compiler-cli": "^15.2.0",
-    "@types/jasmine": "~3.8.0",
     "@types/file-saver": "2.0.3",
+    "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
