--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "target": "ES2022",
     "module": "es2020",
     "lib": ["es2018", "dom"],
+    "skipLibCheck": true,
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
